--- a/WolvenKit.Render/WolvenKit.Render.csproj
+++ b/WolvenKit.Render/WolvenKit.Render.csproj
@@ -114,13 +114,23 @@
     <Compile Include="frmRender.Designer.cs">
       <DependentUpon>frmRender.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTerrain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTerrain.Designer.cs">
+      <DependentUpon>frmTerrain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Mesh.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MeshData.cs" />
     <Compile Include="Rig.cs" />
+    <Compile Include="Terrain\Terrain.cs" />
     <EmbeddedResource Include="frmRender.resx">
       <DependentUpon>frmRender.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTerrain.resx">
+      <DependentUpon>frmTerrain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
