CFont partial reading

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CNode\CComponent\CAreaComponent.cs" />
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CNode\CComponent\CEnvProbeComponent.cs" />
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CResource\CCutsceneTemplate.cs" />
+    <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CResource\CFont.cs" />
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CResource\CGameWorld.cs" />
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CResource\CTextureArray.cs" />
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\CResource\CTerrainTile.cs" />
