xbm bundle previews
- working texture previews
- fixed a bug with w2phase parsing
- fixed a bug where tree list for small files would not work

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -134,6 +134,7 @@
     <Compile Include="FNV1A\FNV1A64HashAlgorithm.cs" />
     <Compile Include="Types\Basic\CByteArray2.cs" />
     <Compile Include="Types\Basic\CMatrix3x3.cs" />
+    <Compile Include="Types\Basic\CVector3.cs" />
     <Compile Include="Types\Basic\IdHandle.cs" />
     <Compile Include="Types\Basic\EntityHandle.cs" />
     <Compile Include="Types\Basic\SCurveData.cs" />
