Implemented a buggy but working w3speech manager for Asset browser

--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -6,6 +6,7 @@
   <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
   <package id="CommandLineParser" version="2.7.82" targetFramework="net48" />
   <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
+  <package id="CSharpImageLibrary" version="4.2.0" targetFramework="net48" />
   <package id="DevZH.FlatBuffers" version="1.4.0" targetFramework="net461" />
   <package id="Dfust.Hotkeys" version="1.2.6206.24906" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
@@ -16,7 +17,9 @@
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.2" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net461" />
   <package id="NAudio" version="1.10.0" targetFramework="net461" />
@@ -75,6 +78,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="UsefulCSharpThings" version="1.7.3" targetFramework="net48" />
   <package id="VGMToolbox" version="1.0.0.1040" targetFramework="net461" />
   <package id="VisualPlus" version="0.4.1.4-beta" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="3.0.0-develop289" targetFramework="net461" />
