--- a/WolvenKit.Render/packages.config
+++ b/WolvenKit.Render/packages.config
@@ -3,4 +3,8 @@
   <package id="AssimpNet" version="3.3.2" targetFramework="net452" />
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.6.2" targetFramework="net48" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net48" />
 </packages>
