--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,15 @@ jobs:
       uses: warrenbuckley/Setup-MSBuild@v1
     - name: Build with MSBuild
       run: msbuild  WolvenKit.sln -p:Configuration=Release
-    - name: Release
-      uses: fnkr/github-action-ghr@v1
-      env:
-        GHR_COMPRESS: zip
-        GHR_PATH: ${{ env.GITHUB_WORKSPACE }}\\WolvenKit\\bin\\Release\\
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+    - name: Set enviroment for github-release
+      run: |
+        7zip a WolvenKit ${{ env.GITHUB_WORKSPACE }}\\WolvenKit\\bin\\Release\\
+    - name: Deploy Nightly
+      uses: WebFreak001/deploy-nightly@v1.0.3
+      with:
+        upload_url: https://uploads.github.com/repos/Traderain/Wolven-kit/releases/11743470/assets{?name,label}
+        release_id: 11743470
+        asset_path: ./WolvenKit.zip
+        asset_name: WolvenKit-$$.zip.zip
+        asset_content_type: application/zip
         
