--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,13 @@ jobs:
       run: msbuild  WolvenKit.sln -p:Configuration=Release
     - name: Set enviroment for github-release
       run: |
-        7zip a WolvenKit ${{ env.GITHUB_WORKSPACE }}\\WolvenKit\\bin\\Release\\
+        7zip a WolvenKit.zip .\\WolvenKit\\bin\\Debug
     - name: Deploy Nightly
       uses: WebFreak001/deploy-nightly@v1.0.3
       with:
         upload_url: https://uploads.github.com/repos/Traderain/Wolven-kit/releases/11743470/assets{?name,label}
         release_id: 11743470
-        asset_path: ./WolvenKit.zip
-        asset_name: WolvenKit-$$.zip.zip
+        asset_path: .\\WolvenKit.zip
+        asset_name: WolvenKit-$$.zip
         asset_content_type: application/zip
         
