--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         upload_url: https://uploads.github.com/repos/Traderain/Wolven-kit/releases/11743470/assets{?name,label}
         release_id: 11743470
-        asset_path: .\\WolvenKit.zip
+        asset_path: ${{ env.GITHUB_WORKSPACE}}\\WolvenKit\\bin\\WolvenKit.zip
         asset_name: WolvenKit-$$.zip
         asset_content_type: application/zip
         
