--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         cd $Env:GITHUB_WORKSPACE\\WolvenKit
         cd bin
         7z a WolvenKit ./Release/
+        cd
+        dir
     - name: Deploy Nightly
       uses: WebFreak001/deploy-nightly@v1.0.3
       env:
@@ -34,7 +36,7 @@ jobs:
       with:
         upload_url: https://uploads.github.com/repos/Traderain/Wolven-kit/releases/11743470/assets{?name,label}
         release_id: 11743470
-        asset_path: ${{ env.GITHUB_WORKSPACE}}\\WolvenKit\\bin\\WolvenKit.zip
+        asset_path: "${{ env.GITHUB_WORKSPACE }}\\WolvenKit\\bin\\WolvenKit.zip"
         asset_name: WolvenKit-$$.zip
         asset_content_type: application/zip
         
