--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: WolvenKit
+name: WolvenKit-Check-Build
 on:
   push:
     branches:
@@ -21,22 +21,3 @@ jobs:
       uses: warrenbuckley/Setup-MSBuild@v1
     - name: Build with MSBuild
       run: msbuild  WolvenKit.sln -p:Configuration=Release
-    - name: Zip Release
-      run: |
-        choco install 7zip --y
-        cd $Env:GITHUB_WORKSPACE\\WolvenKit
-        cd bin
-        7z a WolvenKit.zip ./Release/
-        cd
-        dir
-    - name: Deploy Nightly
-      uses: WebFreak001/deploy-nightly@v1.0.3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: https://uploads.github.com/repos/Traderain/Wolven-kit/releases/11743470/assets{?name,label}
-        release_id: 11743470
-        asset_path: WolvenKit\bin\WolvenKit.zip
-        asset_name: WolvenKit-$$.zip
-        asset_content_type: application/zip
-        
