--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -174,6 +174,7 @@
     <Compile Include="SoundCache\Sound_Cache.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="WEM\HeaderMerge.cs" />
+    <Compile Include="WEM\WemFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
