fbx export implemented

--- a/WolvenKit.Bundles/WolvenKit.Bundles.csproj
+++ b/WolvenKit.Bundles/WolvenKit.Bundles.csproj
@@ -42,6 +42,7 @@
     <NoWarn>CS1591</NoWarn>
     <DocumentationFile>
     </DocumentationFile>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
