CR2W Table writing fix (#163)
* cname and handle fixes, xbm dump

* fixed some stuff, might need some additional work.

Well, it's doing something

* Fix stringtable writing

Some bugs fixed

* cr2w writing fixes

- fixed a bug in grassmask writing
- fixed a bug in cxml writing
- fixed a bug in CMaterialgraph writing
- fixed a bug in Swarmcellmap writing
- fixed a bug in string writing
- fixed a bug in entityhandle writing
- fixed a bug in cindexedarray2d writing

* cr2w writing

- import flags
- fixed a bug in CVariant writing
- fixed a bug in CPhysicalCollision writing
- fixed a bug in CfoliageResource writing
- fixed a bug in CTerrainTile writing
- fixed a bug in CBItnmapTexture writing

* ChunkParent edit

- re-added chunk Parent setting

* Update frmModExplorer.Designer.cs

-fix merging error

Co-authored-by: Moritz <Baron>

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlphanumComparator.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="IWitcherArchive.cs" />
     <Compile Include="IWitcherArchiveType.cs" />
     <Compile Include="IWitcherFile.cs" />
